# betfair

./: .all-contributorsrc  .gitignore  .travis.yml  404.html  HISTORY.rst  LICENSE  MANIFEST.in  README.md  appspec.yml  appveyor.yml  build.sh  index.html  install.sh  mkdocs.yml  pyproject.toml  requirements-speed.txt  requirements-test.txt  requirements.txt  setup.py  setupconda.py
.github/: dependabot.yml
.github/workflows/: test.yml
advanced/: index.html
betfairlightweight/: __init__.py  __version__.py  apiclient.py  apimethod.py  apiparams.py  apiparse.py  apirequest.py  baseclient.py  compat.py  enums.py  exceptions.py  filters.py  metadata.py  streaming.py  utils.py
betfairlightweight/endpoints/: __init__.py  account.py  base.py  baseendpoint.py  betting.py  historic.py  historical.py  inplayservice.py  keepalive.py  login.py  logininteractive.py  logout.py  navigation.py  racecard.py  score.py  scores.py  streaming.py
betfairlightweight/errors/: apierrorhandling.py  apierrors.py  apiexceptions.py
betfairlightweight/examples/: logintest.py
betfairlightweight/parse/: __init__.py  apiparseaccount.py  apiparsebetting.py  apiparsedata.py  apiparsescores.py  apiparsestreaming.py  enums.py  meta.py  models.py
betfairlightweight/resources/: __init__.py  accountresources.py  authresources.py  baseresource.py  bettingresources.py  inplayserviceresources.py  racecardresources.py  resources.py  scoresresources.py  streamingresources.py
betfairlightweight/streaming/: __init__.py  _cache.pyi  betfairstream.py  cache.py  listener.py  stream.py
docs/: advanced.md  endpoints.md  examples.md  help.md  index.md  quickstart.md  streaming.md
endpoints/: index.html
examples/: examplecricketstream.py  examplehistorical.py  examplehistoricaldata.py  examplehistoricdata.py  exampleinplayservice.py  exampleone.py  exampleracecard.py  examplestreaming.py  examplestreamingerrhandling.py  examplestreaminghistorical.py  exampletwo.py  logintest.py
help/: index.html
quickstart/: index.html
scripts/: install.sh
search/: search_index.json
streaming/: index.html
tests/: fixtures.py  test_account.py  test_accountresources.py  test_apiclient.py  test_apimethod.py  test_baseclient.py  test_baseendpoint.py  test_baseresource.py  test_betfairstream.py  test_betting.py  test_bettingresources.py  test_cache.py  test_endpoints.py  test_exceptions.py  test_filters.py  test_historicalstream.py  test_inplayservice.py  test_inplayserviceresources.py  test_keep_alive.py  test_keepalive.py  test_listener.py  test_login.py  test_logininteractive.py  test_logout.py  test_metadata.py  test_navigation.py  test_racecard.py  test_racecardresources.py  test_release.py  test_scores.py  test_scoresresources.py  test_stream.py  test_streaming.py  test_streamingendpoint.py  test_streamingresources.py  test_utils.py  tools.py
tests/integration/: test_historicalendpoint.py  test_historicalstream.py
tests/resources/: availableevents.json  base_endpoint_fail.json  base_endpoint_success.json  incidents.json  (+48 more)
(+62 files in other folders)
